Project enugu_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Bank of Enugu Database
    **markdown content here**
  '''
}

Table users as U {
  username varchar [pk]
  public_id varchar [unique, not null]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: 'now()']
}

Table accounts as A {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: 'now()']
  
  Indexes {
    owner
    (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestamptz [not null, default: 'now()']
  
  Indexes {
    account_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > A.id, not null]
  to_account_id bigint [ref: > A.id, not null]
  amount bigint [not null, note: 'must be positive']
  created_at timestamptz [not null, default: 'now()']
  
  indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
}

Table products as P {
  id bigserial [pk]
  name varchar [not null]
  owner varchar [ref: > U.username, not null]
  price bigint [not null]
  description varchar [not null]
  imgs_url text[]
  imgs_name text[]
  created_at timestamptz [not null, default: 'now()']
  
  Indexes {
    owner
  }
}

Table orders as O {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  status varchar [not null]
  delivery_fee bigint [not null]
  subtotal bigint [not null]
  total bigint [not null]
  created_at timestamptz [not null, default: 'now()']
  
  Indexes {
    owner
  }
}

Table order_items {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  order_id bigint [ref: > O.id, not null]
  product_id bigint [ref: > P.id, not null]
  status varchar [not null]
  quantity bigint [not null]
  created_at timestamptz [not null, default: 'now()']
  
  Indexes {
    owner
  }
}

Table chat_rooms as CR {
  id bigserial [pk]
  name varchar [unique, not null]
  public_id varchar [unique, not null]
  owner varchar [ref: > U.username, not null]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']
  deleted_at timestamptz [default: 'now()']
}

Table chat_subscriptions {
  id bigserial [pk]
  chat_room_id bigint [ref: > CR.id, not null]
  username varchar [ref: > U.username, not null]
  created_at timestamptz [not null, default: 'now()']
  updated_at timestamptz [not null, default: 'now()']
  deleted_at timestamptz [default: 'now()']
}

Table chat_messages {
  id bigserial [pk]
  chat_room_id bigint [ref: > CR.id, not null]
  username varchar [ref: > U.username, not null]
  public_id varchar [not null]
  body text [not null]
  created_at timestamptz [not null, default: 'now()']
}